Fixed bugs for displaying incorrect Hours en expeted time and todo time Fixed bug in displaying text strings Implemented A//Replace, Delete, Rotate project image functionality
ImplementedMemo field (Not tested jet because Save Project is not jet fully iimplemented

Implemented New Project (TODO: Test new project)
Implemented Delete Project (TODO: Test delete project)
Implemented Save Project (TODO: Test save project)

#12

--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -913,6 +913,10 @@
 	<system:String x:Key="Edit.Project.Tab.General.Group.Time.Togo.Days.Tag">Dagen</system:String>
 	<system:String x:Key="Edit.Project.Tab.General.Group.Time.Togo.Days.Tooltip">Resterende bouwtijd in dagen</system:String>
 
+
+	<system:String x:Key="Edit.Project.Tab.General.Group.Time.Error.InvalidTime">Nog geen werktijden ingevoerd</system:String>
+
+
 	<!--#endregion-->
 
 	<!--#region Region Costs-->
@@ -1239,7 +1243,7 @@
 	<system:String x:Key="mainRibbon.Manage.Settings.Button.Label">Instellingen</system:String>
 	<system:String x:Key="mainRibbon.Manage.Settings.Group.Header">Instellingen</system:String>
 	<!--#endregion-->
-	
+
 	<!--#region Regional settings-->
 	<system:String x:Key="Region.Month.Name.01">Januari</system:String>
 	<system:String x:Key="Region.Month.Name.02">Febuari</system:String>
