--- a/Modelbouwer/View/StorageManagement.xaml
+++ b/Modelbouwer/View/StorageManagement.xaml
@@ -8,7 +8,8 @@
 	Title="StorageManagement"
 	d:DesignHeight="600"
 	d:DesignWidth="1000"
-	mc:Ignorable="d">
+	mc:Ignorable="d"
+	>
 
 	<Grid>
 		<TextBlock Text="Welcome to StorageManagement" />
