Implemented Filterd TimeEntry list for each projetct on the ProjectTime Tab page.
#12

--- a/Modelbouwer/View/ProjectManagement.xaml
+++ b/Modelbouwer/View/ProjectManagement.xaml
@@ -932,7 +932,7 @@
 				<TabItem
 					x:Name="ProjectTimeTab"
 					Header="{StaticResource Edit.Project.Tab.BuildTime.Label}"
-					Style="{DynamicResource Default TabItem}"
+					Style="{DynamicResource Default TabItem}" IsEnabled="{Binding TimeViewModel.HasFilteredTimeEntries}"
 					>
 
 					<Grid>
